
-------------------------------------------------------------------------------

* Changes in Cdecl 16.5

** Abbreviated function template parameter packs
Functions with `auto` parameters (abbreviated function templates) like:

    int f( auto x )

have been supported since **cdecl** 9.6; this release adds additional support
for parameter packs like:

    int f( auto ...x )

** `decltype` declarations
Now recognizing `decltype` just to say it's not supported.

** Structured binding declarations
Structured binding declarations are now supported except that you don't assign
them from anything (no `=` _expression_):

    c++decl> explain auto [x, y]
    declare x, y as structured binding
    c++decl> explain auto&& [x, y]
    declare x, y as rvalue reference to structured binding

** Fixed `operator` declaration core dump
An invalid scoped operator name containing a keyword like:

    c++decl> explain bool int::operator!()

would dump core; fixed.


* Changes in Cdecl 16.4.1

** Fixed `make install DESTDIR=...`
Fixed `make install` of shell completion functions when setting `DESTDIR` on
the command-line.

** Better error message when expanding `__VA_*` macros
Attempting to expand either `__VA_ARGS__` or `__VA_OPT__` now says that either
is valid only in a macro definition.


* Changes in Cdecl 16.4

** Echoing commands short option
The short option for `--echo-commands` has been changed from `-O` to `-E`.

** Number help
Help now includes what a "number" is.

** Shell completion options
There are two new options: `--commands`/`-K` that prints **cdecl**'s commands
for the current language and `--options`/`-O` that prints cdecl's options.
Both are intended to aid in writing shell completion functions for **cdecl**.

** Shell completion functions
Bash and Zsh shell completion functions for **cdecl** are included under
`share` and are installed as part of `make install`.

** Improved error messages for predefined types