@@ -31,6 +31,12 @@ cdecl> typedef auto int SI
                ^
 9: error: "typedef auto int" is illegal for built-in type
 cdecl> set c++
+c++decl> typedef auto F()
+                 ^
+9: error: "auto" illegal in type definition
+c++decl> typedef int F( auto )
+                        ^
+16: error: "auto" illegal in type definition
 c++decl> class C { namespace N { class D; } }
                              ^
 21: error: namespace can not nest inside class
